--- a/Creator.Checker/appsettings.json
+++ b/Creator.Checker/appsettings.json
@@ -1,13 +1,13 @@
 {
-  "SourceFilePath": "source_100_mb_long_strings.txt",
+  "SourceFilePath": "source_100_mb_test_strings.txt",
   "SourceEncodingName": "UTF-8",
-  "SourceSizeBytes": 107374182,
+  "SourceSizeBytes": 104857600,
   "SourceOutputWithBom": false,
   "ProcessingTemporaryFolder": "temp",
   "NumberPartDigits": "0123456789",
-  "NumberPartLength": 30,
-  "NumberPartLengthVariation": 0,
+  "NumberPartLength": 10,
+  "NumberPartLengthVariation": 5,
   "StringPartSymbols": " abcdefghijklmnopqrstuvwxyz",
-  "StringPartLength": 10737418,
-  "StringPartLengthVariation": 0
+  "StringPartLength": 10,
+  "StringPartLengthVariation": 5
 }
