--- a/Sorter/appsettings.json
+++ b/Sorter/appsettings.json
@@ -1,6 +1,8 @@
 {
-  "SourceFilePath": "source_100_mb_long_strings.txt",
+  "CacheSizeLimitMegabytes": 20,
+  "EnableParallelExecution": false,
+  "SourceFilePath": "source_100_mb_test_strings.txt",
   "SourceEncodingName": "UTF-8",
-  "TargetFilePath": "target_100_mb_long_strings.txt",
+  "TargetFilePath": "target_100_mb_test_strings.txt",
   "ProcessingTemporaryFolder": "temp"
 }
