Move the parallel execution flag from configuration to autodetection at runtime

--- a/Sorter.Checker/appsettings.json
+++ b/Sorter.Checker/appsettings.json
@@ -1,8 +1,7 @@
 {
-  "CacheSizeLimitMegabytes": 20,
-  "EnableParallelExecution": false,
-  "SourceFilePath": "source_100_mb_test_strings.txt",
+  "CacheSizeLimitMegabytes": 200,
   "SourceEncodingName": "UTF-8",
-  "TargetFilePath": "target_100_mb_test_strings.txt",
-  "ProcessingTemporaryFolder": "temp"
+  "SourceFilePath": "source_001_gb_test_strings.txt",
+  "ProcessingTemporaryFolder": "temp",
+  "TargetFilePath": "target_001_gb_test_strings.txt"
 }
